--- a/my-app/src/App.css
+++ b/my-app/src/App.css
@@ -27,7 +27,8 @@ body{
   display: grid;
   grid-template-areas:
           'header header header header'
-          'nav ava main_content main_content';
+          'nav ava main_content main_content'
+'none none main_content main_content';
 
   grid-template-rows: 1fr;
   grid-template-columns: 2fr 2fr 3fr 5fr;
