--- a/my-app/src/App.css
+++ b/my-app/src/App.css
@@ -28,7 +28,7 @@ body{
   grid-template-areas:
           'header header header'
           'nav ava main_content'
-          'none none main_content';
+          ;
 
   grid-template-rows: 1fr;
   grid-template-columns: 2fr 2fr 8fr;
