--- a/my-app/src/Components/Navbar/Navbar.module.css
+++ b/my-app/src/Components/Navbar/Navbar.module.css
@@ -32,14 +32,12 @@
 }
 .friends_container{
     display: flex;
-    justify-content: space-around;
-    flex-flow: wrap;
+    flex-flow:row wrap;
 }
 h3{
     text-align: center;
 }
 .friend_item{
     display: flex;
-   flex-direction: column;
     align-items: center;
 }
