--- a/my-app/src/Components/Users/Users.module.css
+++ b/my-app/src/Components/Users/Users.module.css
@@ -2,3 +2,8 @@
     color: mediumvioletred;
     font-size: 20px;
 }
+.userBox {
+    border: 1px solid darkviolet;
+    border-radius: 15px;
+    padding: 15px;
+}
